@@ -32,6 +32,13 @@ BUILDFLAGS := -ldflags \
     -X $(DH_GOPKG)/version.BuildDate $(BUILD_DATE)\
     -X $(DH_GOPKG)/version.GoVersion $(GO_VERSION)"
 
+# Avoid sometests that fail on slow architectures.
+ifeq ($(DEB_HOST_ARCH_CPU),arm)
+SKIP_TESTS := $(DH_GOPKG)/retrieval
+else
+SKIP_TESTS :=
+endif
+
 %:
 	dh $@ --buildsystem=golang --with=golang
 
@@ -52,6 +59,10 @@ override_dh_auto_configure:
 
 override_dh_auto_build:
 	dh_auto_build -O--buildsystem=golang -- $(BUILDFLAGS)
+
+override_dh_auto_test:
+	# Avoid some tests that fail on slow architectures.
+	DH_GOLANG_EXCLUDES="$(SKIP_TESTS)" dh_auto_test -O--buildsystem=golang
 
 WEB_VENDORED_DIR := debian/prometheus/usr/share/prometheus/web/static/vendor
 override_dh_auto_install:
